# bitcoin-data-analysis

./: .env.example  .gitignore  Dockerfile  LICENSE  Makefile  On_Chain.py  README.md  addresses_analysis.py  bitcoin_rpc.py  blockstream.py  config.py  mining-analytics.py  pyproject.toml  requirements.txt  setup.py  taproot.py
bitdata/analysis/: addresses.py  coinbase.py  mining-analytics.py  mining.py  taproot.py
bitdata/core/: config.py
bitdata/notifiers/: discord.py  telegram.py
bitdata/provider/: __init__.py  bitcoin_rpc.py  blockstream.py  mempool.py  quiknode.py
dashboard/: On-chain.py
dashboard/pages/: Lightning_Network.py
frontend/: On_Chain.py  main.py
frontend/pages/: Lightning_Network.py
grafana/: docker-compose.yml  readme.md
grafana/config/: prometheus.yml
grafana/exporter/: Dockerfile  client.py
grafana/grafana/: Dockerfile
grafana/grafana/config/: grafana.ini
grafana/prometheus/: Dockerfile
grafana/prometheus/config/: prometheus.yml
prometheus/: btc_conf.py  call.py  client.py  docker-compose.yml
tests/: conftest.py  test_blockstream.py  test_btc_rpc.py
